--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/curegit/stylegan-vue",
   "dependencies": {
-    "vue": "^3.2.0",
-    "vue-router": "^4.1.0"
+    "vue": "^3.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
