--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/curegit/stylegan-vue",
   "dependencies": {
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "openapi-fetch": "^0.12.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
@@ -32,6 +33,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.26.0",
+    "openapi-typescript": "^7.4.0",
     "prettier": "^3.2.0",
     "typescript": "^5.4.0",
     "vite": "^5.2.0",
