--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview --port 8080",
-    "check": "vue-tsc --noEmit && eslint --ext .ts,.tsx,.vue . && prettier -cu --ignore-path .gitignore .",
+    "check": "vue-tsc --noEmit && eslint --ext .ts,.tsx,.vue . && prettier -cu .",
     "lint": "eslint --ext .ts,.tsx,.vue .",
     "fix": "eslint --fix --ext .ts,.tsx,.vue .",
-    "format": "prettier -cwu --ignore-path .gitignore ."
+    "format": "prettier -cwu ."
   },
   "repository": {
     "type": "git",
